Break item header words to prevent text overflows in layout

--- a/public/stylesheets/users/show.css
+++ b/public/stylesheets/users/show.css
@@ -7,6 +7,11 @@
 	opacity: 1;
 }
 
+/* Break header words to prevent item overflow */
+.item .content .header {
+	word-break: break-word;
+}
+
 /* Center all content in mobile devices */
 @media all and (max-width: 767px) {
 	main {
